zoom out logo navbar

--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./src/assets/img/onlyLogo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fresh Water</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <!-- Open Graph Protocol -->
+  <meta property="og:title" content="Alloati SRL" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://fresh-water-machine.vercel.app/" />
+  <meta property="og:image" content="./src/assets/img/onlyLogo.png" />
+  <meta property="og:description" content="Innovación, servicio y calidad" />
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="./src/assets/img/onlyLogo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Alloati SRL</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
