Delete unused images and update file paths

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta property="og:title" content="Alloati SRL" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://fresh-water-machine.vercel.app/" />
-  <meta property="og:image" content="./src/assets/img/onlyLogo.png" />
+  <meta property="og:image" href="/src/assets/img/Alloatti-logo-dark.png" />
   <meta property="og:description" content="Innovación, servicio y calidad" />
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="./src/assets/img/onlyLogo.png" />
+  <link rel="icon" type="icon/svg" href="./src/img/factory.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Alloati SRL</title>
+  <title>Alloatti SRL</title>
 </head>
 
 <body>
