Fix typos and update content

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <!-- Open Graph Protocol -->
-  <meta property="og:title" content="Alloati SRL" />
+  <meta property="og:title" content="Alloatti SRL" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://fresh-water-machine.vercel.app/" />
-  <meta property="og:image" href="/src/assets/img/Alloatti-logo-dark.png" />
-  <meta property="og:description" content="Innovación, servicio y calidad" />
+  <meta property="og:url" content="https://alloatti.vercel.app/" />
+  <meta property="og:image" href="./src/img/Alloatti-logo-dark.png" />
+  <meta property="og:description" content="Envasadora de bidones, lavadora y sanitizadoras de agua potable" />
   <meta charset="UTF-8" />
   <link rel="icon" type="icon/svg" href="./src/img/factory.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
