--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <meta property="og:description" content="Envasadora de bidones, lavadora y sanitizadoras de agua potable" />
   <meta charset="UTF-8" />
   <link rel="icon" type="icon/svg" href="./src/img/factory.svg" />
+  <!-- map -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+  <!-- ~ ~ -->
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Alloatti SRL</title>
 </head>
